Closed Bug 1923526 Opened 1 year ago Closed 1 year ago

Creates multiple Inboxes upon restart (Inbox-1, Inbox-2, Inbox-3, Inbox-4 ...)

Categories

(Thunderbird :: Folder and Message Lists, defect)

Thunderbird 128
defect

Tracking

(thunderbird_esr128 verified, thunderbird132 fixed, thunderbird133 fixed)

VERIFIED FIXED
134 Branch
Tracking Status
thunderbird_esr128 --- verified
thunderbird132 --- fixed
thunderbird133 --- fixed

People

(Reporter: elahi786, Assigned: darktrojan)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:131.0) Gecko/20100101 Firefox/131.0

Steps to reproduce:

We did not do anything. Thunderbird updated automatically

Actual results:

Since above mentioned auto update to 128.3.0esr (64-bit) it has been creating inbox folders under one of our accounts and moving emails into those folder and naming them inbox 1 and not we are up to inbox 9.

Summary: Automatically Creating and moving emails to multiple Inboxes upon restart → Creates multiple Inboxes upon restart (Inbox-1, Inbox-2, Inbox-3, Inbox-4 ...)

See https://mzl.la/4exuhjK for other examples. Sometimes caused by antivirus.

In our case it was caused by the "email protection" function of ESET antivirus. After turning off the option, everything went back to normal. Tb version: 128.3.0esr

No antivirus installed. I did however get this new computer and installed the newest version of TB and copied the profile from old computer to this computer. Everything worked great until a new update came from TB and now the it is creating more inboxes each time and placing emails in them.

How do I roll back to the previous version of TB?

We only have windows antivirus no other antivirus installed.

Thank you in advance.

I have confirmed the same issue in my environment as the one reported here.
In my environment, using version 128.3.1(32bit), an 'Inbox-1' was generated the next time Thunderbird was launched when the optimization process was interrupted by either shutting down Thunderbird or restarting the computer while the 'Optimization Process' was running.

I am using Windows Defender as my security software.

The case reported by SUPERJET have clear causes and are reproducible over and over again.
In the process of compacting the Inbox, Inbox-1 is written out and replaced with Inbox when the process is complete, but if Thunderbird is closed during the process, Inbox-1 will remain.
If the Inbox is large enough, this is easily reproducible.

Does the fix for bug 1924918 clean up temporary files such as Inbox-1 when compacting folders is aborted?

Flags: needinfo?(geoff)

That bug isn't even finished yet, so it is not the cause.

Flags: needinfo?(geoff)

If bug 1924918 is finised, will Thunderbird clean up temporary files when compacting is aborted?

(In reply to EarlgreyTea from comment #8)

If bug 1924918 is finised, will Thunderbird clean up temporary files when compacting is aborted?

No, the cleanup is bug 1878541.

Duplicate of this bug: 1927394

Let me explain why SUPERJET filed bug 1927394 as a new issue.
elahi786 says "We did not do anything." and in Istvan's case it seems to have been interference from "ESET antivirus."
In neither case is there evidence that folder compacting was involved.
SUPERJET noticed that when folder compacting was interrupted, a file "Inbox-1" was left undeleted and displayed as a folder in Thunderbird.
Therefore, SUPERJET decided to report this as a new issue, judging that even though the appearance is the same, the cause is likely to be different.

Now let's get to the main topic.

Steps to reproduce:
See https://bugzilla.mozilla.org/show_bug.cgi?id=1927394#c0

Expected results:
The fix for bug 1878541 seems to delete the nstmp file left by the old compacting, but if the current compacting is interrupted, please also delete the "folder name-x" (x: 1, 2, 3...).

Flags: needinfo?(mkmelin+mozilla)
Flags: needinfo?(mkmelin+mozilla)
Keywords: regression
Flags: needinfo?(mkmelin+mozilla)
Duplicate of this bug: 1926210

(In reply to EarlgreyTea from comment #11)

Let me explain why SUPERJET filed bug 1927394 as a new issue.
elahi786 says "We did not do anything." and in Istvan's case it seems to have been interference from "ESET antivirus."
In neither case is there evidence that folder compacting was involved.
SUPERJET noticed that when folder compacting was interrupted, a file "Inbox-1" was left undeleted and displayed as a folder in Thunderbird.
Therefore, SUPERJET decided to report this as a new issue, judging that even though the appearance is the same, the cause is likely to be different.

Now let's get to the main topic.

Steps to reproduce:
See https://bugzilla.mozilla.org/show_bug.cgi?id=1927394#c0

Expected results:
The fix for bug 1878541 seems to delete the nstmp file left by the old compacting, but if the current compacting is interrupted, please also delete the "folder name-x" (x: 1, 2, 3...).

I am at 15 inbox folders now and 3 inbox.msf.compact-backup folders for one particular email address. As mentioned I only started getting this issues once I copied my profile to a new computer and installed TB and imported the profile. I have the same email addresses etc on my home computers without this issue. I believe this is because I imported a profile and the compacting is being interrupted and creating back inbox folders.

Looks like EarlgreyTea is right about this bug being caused by a failed compact. From a discussion I've just had, I think a number of us have been coming to this same conclusion in the last 24 hours. I have at least a partial fix.

Assignee: nobody → geoff
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

Geoff's patch helps in my testing.

Target Milestone: --- → 134 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/3f35033b5cf7
Close and clean up temporary output stream on compact failure. r=BenC,kaie

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Flags: needinfo?(mkmelin+mozilla)

So this is a regression of Bug 1890448 - Rewrite folder compaction ?

Blocks: 1581079

(In reply to Wayne Mery (:wsmwk) from comment #18)

So this is a regression of Bug 1890448 - Rewrite folder compaction ?

Good to take on beta?

Flags: needinfo?(geoff)

Yes.

Flags: needinfo?(geoff)
Regressed by: 1890448

Comment on attachment 9434656 [details]
Bug 1923526 - Close and clean up temporary output stream on compact failure. r=BenC,kaie

[Approval Request Comment]
Regression caused by (bug #): bug 1890448
User impact if declined: compact doesn't clean up on failure, for some account types the temp files are interpreted as folders
Testing completed (on c-c, etc.): on comm-central since late last week
Risk to taking this patch (and alternatives if risky): low

Attachment #9434656 - Flags: approval-comm-esr128?
Attachment #9434656 - Flags: approval-comm-beta?

I also requested for ESR because we're going to want it even more with bug 1924918.

See Also: → 1924918

(In reply to Geoff Lankow (:darktrojan) from comment #22)

I also requested for ESR because we're going to want it even more with bug 1924918.

How will expunge on shutdown factor in? Is it likely to trigger compact?

Let's talk about that in that bug, because expunge on shutdown explicitly triggers compact.

Comment on attachment 9434656 [details]
Bug 1923526 - Close and clean up temporary output stream on compact failure. r=BenC,kaie

[Triage Comment]
Approved for beta

Attachment #9434656 - Flags: approval-comm-beta? → approval-comm-beta+
Duplicate of this bug: 1929924

Comment on attachment 9434656 [details]
Bug 1923526 - Close and clean up temporary output stream on compact failure. r=BenC,kaie

[Triage Comment]
Approved for esr128

Attachment #9434656 - Flags: approval-comm-esr128? → approval-comm-esr128+

Comment on attachment 9434656 [details]
Bug 1923526 - Close and clean up temporary output stream on compact failure. r=BenC,kaie

[Triage Comment]
Approved for release

Attachment #9434656 - Flags: approval-comm-release+

Confirming this issue as verified fixed with 128.4.3(20241108210256) on macOS 14, Windows 11 and Ubuntu 24.

Status: RESOLVED → VERIFIED

User reports an issue with 128.4.3 https://support.mozilla.org/en-US/questions/1474555 (posting it here so we don't lose track)

Many things could cause a file like that, including forcing Thunderbird to quit in the middle of a compact, which it looks like the user did.

Duplicate of this bug: 1909034
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: