Bug 1923526 - Close and clean up temporary output stream on compact failure. r=BenC,kaie

Differential Revision: https://phabricator.services.mozilla.com/D227571

--HG--
extra : amend_source : da9ca459a293253be271679a1cca7486cf4cefdf